# toolchains_riscv_gnu

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl  extensions.bzl
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/tools/: release.sh
.github/workflows/: bre.yml  ci.yml  linux.yml  mac.yml  release.yml  release_prep.sh  remote.yml  windows.yml
config/: BUILD
examples/: README.md
examples/baremetal/: BUILD
examples/baremetal/startup/: BUILD  linker.ld  riscv.bzl
examples/c/: BUILD  main.c
examples/c++/: BUILD  lib.cc
examples/toolchain/: .bazelrc  BUILD  MODULE.bazel
examples/toolchain/constraints/: BUILD
examples/toolchain/source/: BUILD
examples/toolchain/toolchains/: BUILD
examples/workspace/: .bazelrc  .gitignore  WORKSPACE.bazel
examples/workspace/constraints/march/: BUILD
examples/workspace/source/startup/: entry.S
test/: BUILD
test/baremetal/: BUILD
test/baremetal/startup/: BUILD
test/c/: BUILD  lib.c  lib.h
test/c++/: BUILD
test/constraints/march/: BUILD
test/toolchains/: BUILD
toolchain/: BUILD  compiler.BUILD  config.bzl  toolchain.bzl
toolchain/archives/: README.md  generate.py  riscv_none_elf.bzl
toolchain/riscv-none-elf/darwin_x86_64/: BUILD  riscv-none-elf-ar  riscv-none-elf-cpp  riscv-none-elf-gcc  riscv-none-elf-gcov  riscv-none-elf-ld  riscv-none-elf-nm  riscv-none-elf-objcopy  riscv-none-elf-objdump  riscv-none-elf-strip
toolchain/riscv-none-elf/linux_aarch64/: BUILD  riscv-none-elf-cpp  riscv-none-elf-gcc  riscv-none-elf-gcov  riscv-none-elf-ld  riscv-none-elf-objdump
toolchain/riscv-none-elf/linux_x86_64/: BUILD  riscv-none-elf-ar  riscv-none-elf-nm  riscv-none-elf-objcopy  riscv-none-elf-strip
toolchain/riscv-none-elf/windows_x86_32/: BUILD  riscv-none-elf-ar.bat  riscv-none-elf-cpp.bat  riscv-none-elf-gcc.bat  riscv-none-elf-gcov.bat  riscv-none-elf-ld.bat  riscv-none-elf-nm.bat  riscv-none-elf-objcopy.bat  riscv-none-elf-objdump.bat  riscv-none-elf-strip.bat
toolchain/templates/: compiler.BUILD  toolchain.BUILD  toolchain.bazel  top.BUILD
workspaces/custom_toolchain/: .bazelrc  WORKSPACE
workspaces/custom_toolchain/constraints/: BUILD
workspaces/custom_toolchain/src/: BUILD  main.c  start.c
workspaces/custom_toolchain/toolchains/: BUILD
