"""Custom toolchain example"""

module(
    name = "custom_toolchain",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "toolchains_riscv_gnu")
local_path_override(
    module_name = "toolchains_riscv_gnu",
    path = "../..",
)

riscv_toolchain = use_extension("@toolchains_riscv_gnu//:extensions.bzl", "riscv_toolchain")
riscv_toolchain.riscv_none_elf(version = "13.2.1")
use_repo(
    riscv_toolchain,
    "riscv_none_elf",
    "riscv_none_elf_darwin_arm64",
    "riscv_none_elf_darwin_x86_64",
    "riscv_none_elf_linux_aarch64",
    "riscv_none_elf_linux_x86_64",
    "riscv_none_elf_windows_x86_64",
)

register_toolchains(
    "//toolchains:all",
)
