"""Custom toolchain example"""

module(
    name = "custom_toolchain",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.0.0")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "toolchains_riscv_gnu")
local_path_override(
    module_name = "toolchains_riscv_gnu",
    path = "../..",
)

riscv_toolchain = use_extension("@toolchains_riscv_gnu//:extensions.bzl", "riscv_toolchain")
riscv_toolchain.riscv_none_elf()
use_repo(riscv_toolchain, "riscv_none_elf")

register_toolchains("//toolchains:all")
